--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-digicode",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "authors": [
     "Maduma <maduma@pt.lu>"
   ],
@@ -15,5 +15,9 @@
   "dependencies": {
     "angular-material": "~0.9.4",
     "ng-underscore": "~0.1.0"
+  },
+  "main": {
+    "angular-digicode.js",
+    "angular-digicode.css"
   }
 }
