update underscore dependecy

--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,12 @@
     "tests"
   ],
   "dependencies": {
+    "angular": "~1.4.0",
     "angular-material": "~0.9.4",
-    "ng-underscore": "~0.1.0"
+    "underscore": "~1.8.3"
   },
   "main": [
+    "angular-underscore.js",
     "angular-digicode.js",
     "angular-digicode.css"
   ]
